# tcc_legal_agent

./: .gitignore  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
src/: config.py  ingestion.py  rag_engine.py  schemas.py  validator.py
tests/: conftest.py  test_ingestion.py  test_validator.py
