[project]
name = "tcc-legal-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Paes",email = "diego.paes92@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "llama-index-core (>=0.14.12,<0.15.0)",
    "llama-index-llms-openai (>=0.6.12,<0.7.0)",
    "llama-index-embeddings-openai (>=0.5.1,<0.6.0)",
    "llama-index-vector-stores-chroma (>=0.5.5,<0.6.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "llama-index (>=0.14.12,<0.15.0)",
]

[tool.poetry]
packages = [{include = "tcc_legal_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocstrings[python] (>=1.0.0,<2.0.0)"
]
